paper/manuscript-v1/checkpoints/v8/source/chapters/09-references.md
# 参考文献

[1] 第二十三届中国研究生数学建模竞赛. A题：通用神经网络处理器下的多核调度问题及官方附件[Z]. 2026.

[2] GRAHAM R L. Bounds for Certain Multiprocessing Anomalies[J]. Bell System Technical Journal, 1966, 45(9): 1563–1581. DOI: 10.1002/j.1538-7305.1966.tb01709.x.

[3] ÇATALYÜREK Ü V, AYKANAT C. Hypergraph-Partitioning-Based Decomposition for Parallel Sparse-Matrix Vector Multiplication[J]. IEEE Transactions on Parallel and Distributed Systems, 1999, 10(7): 673–693. DOI: 10.1109/71.780863.

[4] SETHI R, ULLMAN J D. The Generation of Optimal Code for Arithmetic Expressions[J]. Journal of the ACM, 1970, 17(4): 715–728. DOI: 10.1145/321607.321620.

[5] BLACK P E. Hyperedge; Hypergraph[EB/OL]. Dictionary of Algorithms and Data Structures, NIST. [2026-09-26]. https://xlinux.nist.gov/dads/HTML/hyperedge.html.

[6] POPP M, SCHLAG S, SCHULZ C, SEEMAIER D. Multilevel Acyclic Hypergraph Partitioning[C]//2021 Proceedings of the Symposium on Algorithm Engineering and Experiments (ALENEX). 2021: 1–15. DOI: 10.1137/1.9781611976472.1.

[7] ÖZKAYA M Y, ÇATALYÜREK Ü V. A Simple and Elegant Mathematical Formulation for the Acyclic DAG Partitioning Problem[EB/OL]. arXiv:2207.13638, 2022 [2026-09-26]. https://arxiv.org/abs/2207.13638. DOI: 10.48550/arXiv.2207.13638.

[8] VELDT N, BENSON A R, KLEINBERG J. Hypergraph Cuts with General Splitting Functions[J]. SIAM Review, 2022, 64(3): 650–685. DOI: 10.1137/20M1321048.

[9] DINIC E A. An algorithm for the solution of the max-flow problem with the polynomial estimation[J]. Soviet Mathematics Doklady, 1970, 11: 1277–1280.

[10] JIN C, PUROHIT M, SVITKINA Z, VEE E, WANG J R. New Tools for Peak Memory Scheduling[EB/OL]. arXiv:2312.13526, 2023 [2026-09-26]. https://arxiv.org/abs/2312.13526. DOI: 10.48550/arXiv.2312.13526.

[11] ANGEL E, MORAIS S, REGNAULT D. A Bi-Criteria FPTAS for Scheduling with Memory Constraints on Graphs with Bounded Tree-Width[C]//Euro-Par 2022: Parallel Processing. LNCS 13440. 2022: 136–151. DOI: 10.1007/978-3-031-12597-3_9.

[12] CURTSINGER C, BERGER E D. Coz: Finding Code that Counts with Causal Profiling[C]//Proceedings of the 25th Symposium on Operating Systems Principles. 2015: 184–197. DOI: 10.1145/2815400.2815409.

[13] 张洪滨, 周旭林, 邢明杰, 等. AutoConfig: 面向深度学习编译优化的自动配置机制[J]. 软件学报, 2024, 35(6): 2668–2686. DOI: 10.13328/j.cnki.jos.007102.

[14] 高伟, 李帅龙, 茆琳, 等. 一种基于TVM的算子生成加速策略[J]. 计算机工程, 2024, 50(8): 353–362. DOI: 10.19678/j.issn.1000-3428.0068182.

[15] TOPCUOGLU H, HARIRI S, WU M Y. Performance-effective and low-complexity task scheduling for heterogeneous computing[J]. IEEE Transactions on Parallel and Distributed Systems, 2002, 13(3): 260–274. DOI: 10.1109/71.993206.

[16] DROBOUCHEVITCH I G, STRUSEVICH V A. A heuristic algorithm for two-machine re-entrant shop scheduling[J]. Annals of Operations Research, 1999, 86: 417–439. DOI: 10.1023/A:1018927407164.

[17] LIU R, PEI M, DING F, et al. LATTICE: Constraint-Directed Scheduling, Memory Planning, and Pipeline Refinement for NPUs[EB/OL]. arXiv:2607.17422v3, 2026-08-04 [2026-09-26]. https://arxiv.org/abs/2607.17422v3. DOI: 10.48550/arXiv.2607.17422.
